hw06/y.output
Grammar

    0 $accept: lines $end

    1 lines: lines expr '\n'
    2      | lines error '\n'
    3      | /* empty */

    4 expr: expr '+' expr
    5     | expr '-' expr
    6     | expr '*' expr
    7     | expr '/' expr
    8     | '(' expr ')'
    9     | '-' expr
   10     | expr '|' expr
   11     | expr '^' expr
   12     | expr '&' expr
   13     | expr '%' expr
   14     | '~' expr
   15     | number

   16 number: INTEGER
   17       | FLOAT


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1 2
'%' (37) 13
'&' (38) 12
'(' (40) 8
')' (41) 8
'*' (42) 6
'+' (43) 4
'-' (45) 5 9
'/' (47) 7
'^' (94) 11
'|' (124) 10
'~' (126) 14
error (256) 2
INTEGER (258) 16
FLOAT (259) 17
UMINUS (260)


Nonterminals, with rules where they appear

$accept (18)
    on left: 0
lines (19)
    on left: 1 2 3, on right: 0 1 2
expr (20)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15, on right: 1 4 5 6 7 8 9
    10 11 12 13 14
number (21)
    on left: 16 17, on right: 15


state 0

    0 $accept: . lines $end

    $default  reduce using rule 3 (lines)

    lines  go to state 1


state 1

    0 $accept: lines . $end
    1 lines: lines . expr '\n'
    2      | lines . error '\n'

    $end     shift, and go to state 2
    error    shift, and go to state 3
    INTEGER  shift, and go to state 4
    FLOAT    shift, and go to state 5
    '-'      shift, and go to state 6
    '~'      shift, and go to state 7
    '('      shift, and go to state 8

    expr    go to state 9
    number  go to state 10


state 2

    0 $accept: lines $end .

    $default  accept


state 3

    2 lines: lines error . '\n'

    '\n'  shift, and go to state 11


state 4

   16 number: INTEGER .

    $default  reduce using rule 16 (number)


state 5

   17 number: FLOAT .

    $default  reduce using rule 17 (number)


state 6

    9 expr: '-' . expr

    INTEGER  shift, and go to state 4
    FLOAT    shift, and go to state 5
    '-'      shift, and go to state 6
    '~'      shift, and go to state 7
    '('      shift, and go to state 8

    expr    go to state 12
    number  go to state 10


state 7

   14 expr: '~' . expr

    INTEGER  shift, and go to state 4
    FLOAT    shift, and go to state 5
    '-'      shift, and go to state 6
    '~'      shift, and go to state 7
    '('      shift, and go to state 8

    expr    go to state 13
    number  go to state 10


state 8

    8 expr: '(' . expr ')'

    INTEGER  shift, and go to state 4
    FLOAT    shift, and go to state 5
    '-'      shift, and go to state 6
    '~'      shift, and go to state 7
    '('      shift, and go to state 8

    expr    go to state 14
    number  go to state 10


state 9

    1 lines: lines expr . '\n'
    4 expr: expr . '+' expr
    5     | expr . '-' expr
    6     | expr . '*' expr
    7     | expr . '/' expr
   10     | expr . '|' expr
   11     | expr . '^' expr
   12     | expr . '&' expr
   13     | expr . '%' expr

    '|'   shift, and go to state 15
    '^'   shift, and go to state 16
    '&'   shift, and go to state 17
    '+'   shift, and go to state 18
    '-'   shift, and go to state 19
    '*'   shift, and go to state 20
    '/'   shift, and go to state 21
    '%'   shift, and go to state 22
    '\n'  shift, and go to state 23


state 10

   15 expr: number .

    $default  reduce using rule 15 (expr)


state 11

    2 lines: lines error '\n' .

    $default  reduce using rule 2 (lines)


state 12

    4 expr: expr . '+' expr
    5     | expr . '-' expr
    6     | expr . '*' expr
    7     | expr . '/' expr
    9     | '-' expr .
   10     | expr . '|' expr
   11     | expr . '^' expr
   12     | expr . '&' expr
   13     | expr . '%' expr

    $default  reduce using rule 9 (expr)


state 13

    4 expr: expr . '+' expr
    5     | expr . '-' expr
    6     | expr . '*' expr
    7     | expr . '/' expr
   10     | expr . '|' expr
   11     | expr . '^' expr
   12     | expr . '&' expr
   13     | expr . '%' expr
   14     | '~' expr .

    $default  reduce using rule 14 (expr)


state 14

    4 expr: expr . '+' expr
    5     | expr . '-' expr
    6     | expr . '*' expr
    7     | expr . '/' expr
    8     | '(' expr . ')'
   10     | expr . '|' expr
   11     | expr . '^' expr
   12     | expr . '&' expr
   13     | expr . '%' expr

    '|'  shift, and go to state 15
    '^'  shift, and go to state 16
    '&'  shift, and go to state 17
    '+'  shift, and go to state 18
    '-'  shift, and go to state 19
    '*'  shift, and go to state 20
    '/'  shift, and go to state 21
    '%'  shift, and go to state 22
    ')'  shift, and go to state 24


state 15

   10 expr: expr '|' . expr

    INTEGER  shift, and go to state 4
    FLOAT    shift, and go to state 5
    '-'      shift, and go to state 6
    '~'      shift, and go to state 7
    '('      shift, and go to state 8

    expr    go to state 25
    number  go to state 10


state 16

   11 expr: expr '^' . expr

    INTEGER  shift, and go to state 4
    FLOAT    shift, and go to state 5
    '-'      shift, and go to state 6
    '~'      shift, and go to state 7
    '('      shift, and go to state 8

    expr    go to state 26
    number  go to state 10


state 17

   12 expr: expr '&' . expr

    INTEGER  shift, and go to state 4
    FLOAT    shift, and go to state 5
    '-'      shift, and go to state 6
    '~'      shift, and go to state 7
    '('      shift, and go to state 8

    expr    go to state 27
    number  go to state 10


state 18

    4 expr: expr '+' . expr

    INTEGER  shift, and go to state 4
    FLOAT    shift, and go to state 5
    '-'      shift, and go to state 6
    '~'      shift, and go to state 7
    '('      shift, and go to state 8

    expr    go to state 28
    number  go to state 10


state 19

    5 expr: expr '-' . expr

    INTEGER  shift, and go to state 4
    FLOAT    shift, and go to state 5
    '-'      shift, and go to state 6
    '~'      shift, and go to state 7
    '('      shift, and go to state 8

    expr    go to state 29
    number  go to state 10


state 20

    6 expr: expr '*' . expr

    INTEGER  shift, and go to state 4
    FLOAT    shift, and go to state 5
    '-'      shift, and go to state 6
    '~'      shift, and go to state 7
    '('      shift, and go to state 8

    expr    go to state 30
    number  go to state 10


state 21

    7 expr: expr '/' . expr

    INTEGER  shift, and go to state 4
    FLOAT    shift, and go to state 5
    '-'      shift, and go to state 6
    '~'      shift, and go to state 7
    '('      shift, and go to state 8

    expr    go to state 31
    number  go to state 10


state 22

   13 expr: expr '%' . expr

    INTEGER  shift, and go to state 4
    FLOAT    shift, and go to state 5
    '-'      shift, and go to state 6
    '~'      shift, and go to state 7
    '('      shift, and go to state 8

    expr    go to state 32
    number  go to state 10


state 23

    1 lines: lines expr '\n' .

    $default  reduce using rule 1 (lines)


state 24

    8 expr: '(' expr ')' .

    $default  reduce using rule 8 (expr)


state 25

    4 expr: expr . '+' expr
    5     | expr . '-' expr
    6     | expr . '*' expr
    7     | expr . '/' expr
   10     | expr . '|' expr
   10     | expr '|' expr .
   11     | expr . '^' expr
   12     | expr . '&' expr
   13     | expr . '%' expr

    '^'  shift, and go to state 16
    '&'  shift, and go to state 17
    '+'  shift, and go to state 18
    '-'  shift, and go to state 19
    '*'  shift, and go to state 20
    '/'  shift, and go to state 21
    '%'  shift, and go to state 22

    $default  reduce using rule 10 (expr)


state 26

    4 expr: expr . '+' expr
    5     | expr . '-' expr
    6     | expr . '*' expr
    7     | expr . '/' expr
   10     | expr . '|' expr
   11     | expr . '^' expr
   11     | expr '^' expr .
   12     | expr . '&' expr
   13     | expr . '%' expr

    '&'  shift, and go to state 17
    '+'  shift, and go to state 18
    '-'  shift, and go to state 19
    '*'  shift, and go to state 20
    '/'  shift, and go to state 21
    '%'  shift, and go to state 22

    $default  reduce using rule 11 (expr)


state 27

    4 expr: expr . '+' expr
    5     | expr . '-' expr
    6     | expr . '*' expr
    7     | expr . '/' expr
   10     | expr . '|' expr
   11     | expr . '^' expr
   12     | expr . '&' expr
   12     | expr '&' expr .
   13     | expr . '%' expr

    '+'  shift, and go to state 18
    '-'  shift, and go to state 19
    '*'  shift, and go to state 20
    '/'  shift, and go to state 21
    '%'  shift, and go to state 22

    $default  reduce using rule 12 (expr)


state 28

    4 expr: expr . '+' expr
    4     | expr '+' expr .
    5     | expr . '-' expr
    6     | expr . '*' expr
    7     | expr . '/' expr
   10     | expr . '|' expr
   11     | expr . '^' expr
   12     | expr . '&' expr
   13     | expr . '%' expr

    '*'  shift, and go to state 20
    '/'  shift, and go to state 21
    '%'  shift, and go to state 22

    $default  reduce using rule 4 (expr)


state 29

    4 expr: expr . '+' expr
    5     | expr . '-' expr
    5     | expr '-' expr .
    6     | expr . '*' expr
    7     | expr . '/' expr
   10     | expr . '|' expr
   11     | expr . '^' expr
   12     | expr . '&' expr
   13     | expr . '%' expr

    '*'  shift, and go to state 20
    '/'  shift, and go to state 21
    '%'  shift, and go to state 22

    $default  reduce using rule 5 (expr)


state 30

    4 expr: expr . '+' expr
    5     | expr . '-' expr
    6     | expr . '*' expr
    6     | expr '*' expr .
    7     | expr . '/' expr
   10     | expr . '|' expr
   11     | expr . '^' expr
   12     | expr . '&' expr
   13     | expr . '%' expr

    $default  reduce using rule 6 (expr)


state 31

    4 expr: expr . '+' expr
    5     | expr . '-' expr
    6     | expr . '*' expr
    7     | expr . '/' expr
    7     | expr '/' expr .
   10     | expr . '|' expr
   11     | expr . '^' expr
   12     | expr . '&' expr
   13     | expr . '%' expr

    $default  reduce using rule 7 (expr)


state 32

    4 expr: expr . '+' expr
    5     | expr . '-' expr
    6     | expr . '*' expr
    7     | expr . '/' expr
   10     | expr . '|' expr
   11     | expr . '^' expr
   12     | expr . '&' expr
   13     | expr . '%' expr
   13     | expr '%' expr .

    $default  reduce using rule 13 (expr)
